feat(Notification): overhaul reminder system with dual notifications, snooze, and i18n
- Notifications: Implement strict priority logic (Custom > Default) in NotificationManager.
- Snooze: Add "Destructive Snooze" for default reminders (updates start time) and property updates for custom reminders.
- Settings: Refactor reminder settings into modular renderReminders.ts with full i18n support.
- UI: Update EditEvent modal with strict i18n-compliant "Notify" controls (input + presets).
- Optimization: Limit notification checks to events within the next 48 hours.
- Fix: Update settings migration to persist new reminder configurations.
- i18n: Add comprehensive translation keys for settings and modal fields.

--- a/src/features/i18n/locales/en.json
+++ b/src/features/i18n/locales/en.json
@@ -56,10 +56,17 @@
       "clickToCreateEvent": {
         "label": "Click on a day in month view to create event",
         "description": "Switch off to open day view on click instead."
+      }
+    },
+    "reminders": {
+      "title": "Reminders",
+      "enableDefault": {
+        "label": "Enable default reminder",
+        "description": "Automatically add a reminder to new events."
       },
-      "enableReminders": {
-        "label": "Enable event reminders",
-        "description": "Show a desktop notification 10 minutes before an event starts."
+      "defaultTime": {
+        "label": "Default reminder time",
+        "description": "Minutes before event to remind (default: 10)"
       }
     },
     "appearance": {
@@ -319,9 +326,19 @@
           "label": "Options",
           "allDay": "All day",
           "isTask": "Is a Task",
-          "completed": "Completed",
-          "endReminder": "Remind 10m before end",
-          "endReminderTooltip": "An end reminder requires a specific end time."
+          "completed": "Completed"
+        },
+        "notification": {
+          "label": "Notify:",
+          "mins": "Mins",
+          "select": "Select...",
+          "presets": {
+            "30m": "30 min",
+            "1h": "1 hour",
+            "6h": "6 hours",
+            "12h": "12 hours",
+            "24h": "24 hours"
+          }
         },
         "repeats": {
           "label": "Repeats",
