feat(ics): add support for local ICS files from vault
- Add mode toggle in ICS config UI to switch between Remote URL and Local File
- Update ICSProvider.getEvents() to detect local paths and read from vault
- Make isRemote and displayName dynamic getters based on source type
- Add plugin prop to CalendarProvider interface for vault access
- Update all provider config props to include plugin for consistency

Local files are detected by checking if URL doesn't start with http/https/webcal.
Remote URL functionality remains unchanged.

--- a/src/features/i18n/locales/de.json
+++ b/src/features/i18n/locales/de.json
@@ -247,7 +247,7 @@
         "dailynote": "Tagesnotiz",
         "icloud": "iCloud",
         "caldav": "CalDAV",
-        "ical": "Remote (.ics Format)",
+        "ical": "ICS",
         "google": "Google Kalender",
         "tasks": "Obsidian Tasks"
       },
