--- a/src/features/i18n/locales/it.json
+++ b/src/features/i18n/locales/it.json
@@ -225,7 +225,7 @@
         "dailynote": "Nota giornaliera",
         "icloud": "iCloud",
         "caldav": "CalDAV",
-        "ical": "Remoto (formato .ics)",
+        "ical": "ICS",
         "google": "Google Calendar",
         "tasks": "Obsidian Tasks"
       },
